Set parent to HI so release artifacts are deployed to our own nexus

--- a/pom.xml
+++ b/pom.xml
@@ -34,14 +34,20 @@
 		<commons.collection.version>3.2.2</commons.collection.version>
 		<ocpsoft.rewrite.version>2.0.12.Final</ocpsoft.rewrite.version>
 	</properties>
+	<!--<parent>-->
+		<!--&lt;!&ndash; Uses the OSS sonatype nexus repository for distribution &ndash;&gt;-->
+		<!--&lt;!&ndash; See https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide &ndash;&gt;-->
+		<!--<groupId>org.sonatype.oss</groupId>-->
+		<!--<artifactId>oss-parent</artifactId>-->
+		<!--<version>9</version>-->
+	<!--</parent>-->
+
 	<parent>
-		<!-- Uses the OSS sonatype nexus repository for distribution -->
-		<!-- See https://docs.sonatype.org/display/Repository/Sonatype+OSS+Maven+Repository+Usage+Guide -->
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>9</version>
+		<artifactId>parent-pom</artifactId>
+		<groupId>com.hi</groupId>
+		<version>1.21</version>
 	</parent>
-	
+
 	<groupId>org.eobjects.datacleaner</groupId>
 	<artifactId>DataCleaner</artifactId>
 	<version>5.0.4-SNAPSHOT</version>
@@ -51,7 +57,36 @@
 		almost any kind of data, eg. CSV files, databases, Excel spreadsheets, NoSQL databases and more.</description>
 	<url>https://datacleaner.org</url>
 	<packaging>pom</packaging>
-	
+
+	<repositories>
+		<repository>
+			<id>nexus</id>
+			<name>Nexus maven repo at HI</name>
+			<url>http://repo.humaninference.com/content/groups/public</url>
+			<releases>
+				<enabled>true</enabled>
+				<checksumPolicy>fail</checksumPolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<checksumPolicy>fail</checksumPolicy>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>thirdparty</id>
+			<name>Nexus maven repo at HI</name>
+			<url>http://repo.humaninference.com/content/repositories/thirdparty</url>
+			<releases>
+				<checksumPolicy>fail</checksumPolicy>
+			</releases>
+			<snapshots>
+				<checksumPolicy>fail</checksumPolicy>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<profiles>
 		<profile>
 			<!-- Default profile -->
