--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,21 @@
 	
 	<groupId>org.eobjects.datacleaner</groupId>
 	<artifactId>DataCleaner</artifactId>
-	<version>5.0.2</version>
+	<version>5.0.2.1-SNAPSHOT</version>
 	<name>DataCleaner parent</name>
 	<description>DataCleaner is the premier open source data quality solution. Use it to
 		discover, analyze, profile, diagnose and monitor the state of your data. DataCleaner works with
 		almost any kind of data, eg. CSV files, databases, Excel spreadsheets, NoSQL databases and more.</description>
 	<url>https://datacleaner.org</url>
 	<packaging>pom</packaging>
-	
+
+	<scm>
+		<url>https://github.com/JoosjeBoon/DataCleaner.git</url>
+		<connection>scm:git:https://github.com/JoosjeBoon/DataCleaner.git</connection>
+		<developerConnection>scm:git:https://github.com/JoosjeBoon/DataCleaner.git</developerConnection>
+		<tag>HEAD</tag>
+	</scm>
+
 	<repositories>
 		<repository>
 			<id>nexus</id>
@@ -283,12 +290,6 @@
 			<url>http://www.gnu.org/licenses/lgpl.txt</url>
 		</license>
 	</licenses>
-	<scm>
-		<url>https://github.com/datacleaner/DataCleaner</url>
-		<connection>scm:git:https://github.com/datacleaner/DataCleaner.git</connection>
-		<developerConnection>scm:git:https://github.com/datacleaner/DataCleaner.git</developerConnection>
-		<tag>DataCleaner-5.0.2</tag>
-	</scm>
 	<mailingLists>
 		<mailingList>
 			<name>DataCleaner-dev mailing list</name>
