--- a/components/html-rendering/pom.xml
+++ b/components/html-rendering/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-components</artifactId>
-		<version>5.0.2</version>
+		<version>5.0.2.1</version>
 	</parent>
 	<artifactId>DataCleaner-html-rendering</artifactId>
 	<build>
@@ -69,4 +69,8 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+
+  <scm>
+    <tag>DataCleaner-5.0.2.1</tag>
+  </scm>
 </project>
