--- a/components/standardizers/pom.xml
+++ b/components/standardizers/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-components</artifactId>
-		<version>5.0.2</version>
+		<version>5.0.2.1</version>
 	</parent>
 	<artifactId>DataCleaner-standardizers</artifactId>
 	<dependencies>
@@ -14,4 +14,8 @@
 		</dependency>
 
 	</dependencies>
+
+  <scm>
+    <tag>DataCleaner-5.0.2.1</tag>
+  </scm>
 </project>
