--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 	
 	<groupId>org.eobjects.datacleaner</groupId>
 	<artifactId>DataCleaner</artifactId>
-	<version>5.0.2.1</version>
+	<version>5.0.2.1-SNAPSHOT</version>
 	<name>DataCleaner parent</name>
 	<description>DataCleaner is the premier open source data quality solution. Use it to
 		discover, analyze, profile, diagnose and monitor the state of your data. DataCleaner works with
@@ -54,7 +54,7 @@
 		<url>https://github.com/JoosjeBoon/DataCleaner.git</url>
 		<connection>scm:git:https://github.com/JoosjeBoon/DataCleaner.git</connection>
 		<developerConnection>scm:git:https://github.com/JoosjeBoon/DataCleaner.git</developerConnection>
-		<tag>DataCleaner-5.0.2.1-rc</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
