[maven-release-plugin] prepare release DataCleaner-5.0.2.1-rc1

--- a/components/fuse/pom.xml
+++ b/components/fuse/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-components</artifactId>
-		<version>5.0.2</version>
+		<version>5.0.2.1</version>
 	</parent>
 	<artifactId>DataCleaner-fuse</artifactId>
 
@@ -14,4 +14,8 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+  <scm>
+    <tag>DataCleaner-5.0.2.1-rc1</tag>
+  </scm>
 </project>
