--- a/components/basic-analyzers/pom.xml
+++ b/components/basic-analyzers/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-components</artifactId>
-		<version>5.0.2</version>
+		<version>5.0.2.1</version>
 	</parent>
 	<artifactId>DataCleaner-basic-analyzers</artifactId>
 	<build>
@@ -51,4 +51,8 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+
+  <scm>
+    <tag>DataCleaner-5.0.2.1-rc1</tag>
+  </scm>
 </project>
