--- a/components/javascript/pom.xml
+++ b/components/javascript/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-components</artifactId>
-		<version>5.0.2</version>
+		<version>5.0.2.1</version>
 	</parent>
 	<artifactId>DataCleaner-javascript</artifactId>
 	<dependencies>
@@ -18,4 +18,8 @@
 			<version>1.7R4</version>
 		</dependency>
 	</dependencies>
+
+  <scm>
+    <tag>DataCleaner-5.0.2.1-rc1</tag>
+  </scm>
 </project>
