--- a/monitor/extensions/excel-datastore-wizard/pom.xml
+++ b/monitor/extensions/excel-datastore-wizard/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-monitor-extensions</artifactId>
-		<version>5.0.2</version>
+		<version>5.0.2.1</version>
 	</parent>
 	<artifactId>DataCleaner-monitor-excel-datastore-wizard</artifactId>
 
@@ -14,4 +14,8 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+
+  <scm>
+    <tag>DataCleaner-5.0.2.1-rc1</tag>
+  </scm>
 </project>
