--- a/components/el/pom.xml
+++ b/components/el/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-components</artifactId>
-		<version>5.0.2.1</version>
+		<version>5.0.2.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>DataCleaner-el</artifactId>
 	<dependencies>
@@ -23,8 +23,4 @@
 			<artifactId>javax.el-api</artifactId>
 		</dependency>
 	</dependencies>
-
-  <scm>
-    <tag>DataCleaner-5.0.2.1-rc1</tag>
-  </scm>
 </project>
