--- a/engine/env/pom.xml
+++ b/engine/env/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-engine</artifactId>
-		<version>5.0.2.1</version>
+		<version>5.0.2.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>DataCleaner-env</artifactId>
 	<packaging>pom</packaging>
@@ -31,8 +31,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-  <scm>
-    <tag>DataCleaner-5.0.2.1-rc1</tag>
-  </scm>
 </project>
