--- a/monitor/documentation/pom.xml
+++ b/monitor/documentation/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>DataCleaner-monitor</artifactId>
 		<groupId>org.eobjects.datacleaner</groupId>
-		<version>5.0.2.1</version>
+		<version>5.0.2.2-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -56,8 +56,4 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 	</dependencies>
-
-  <scm>
-    <tag>DataCleaner-5.0.2.1-rc1</tag>
-  </scm>
 </project>
