--- a/monitor/extensions/csv-datastore-wizard/pom.xml
+++ b/monitor/extensions/csv-datastore-wizard/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-monitor-extensions</artifactId>
-		<version>5.0.2.1</version>
+		<version>5.0.2.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>DataCleaner-monitor-csv-datastore-wizard</artifactId>
 
@@ -19,8 +19,4 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
-
-  <scm>
-    <tag>DataCleaner-5.0.2.1-rc1</tag>
-  </scm>
 </project>
