--- a/pom.xml
+++ b/pom.xml
@@ -292,9 +292,9 @@
 		</license>
 	</licenses>
 	<scm>
-		<url>https://github.com/datacleaner/DataCleaner</url>
-		<connection>scm:git:https://github.com/datacleaner/DataCleaner.git</connection>
-		<developerConnection>scm:git:https://github.com/datacleaner/DataCleaner.git</developerConnection>
+		<url>https://github.com/JoosjeBoon/DataCleaner.git</url>
+		<connection>scm:git:https://github.com/JoosjeBoon/DataCleaner.git</connection>
+		<developerConnection>scm:git:https://github.com/JoosjeBoon/DataCleaner.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 	<mailingLists>
