--- a/components/http/pom.xml
+++ b/components/http/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-components</artifactId>
-		<version>5.0.2.2-SNAPSHOT</version>
+		<version>5.0.2.3</version>
 	</parent>
 	<artifactId>DataCleaner-http</artifactId>
 
