--- a/engine/env/cluster/pom.xml
+++ b/engine/env/cluster/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-env</artifactId>
-		<version>5.0.2.2-SNAPSHOT</version>
+		<version>5.0.2.3</version>
 	</parent>
 	<artifactId>DataCleaner-env-cluster</artifactId>
 
