--- a/monitor/extensions/sugarcrm-datastore-wizard/pom.xml
+++ b/monitor/extensions/sugarcrm-datastore-wizard/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.eobjects.datacleaner</groupId>
 		<artifactId>DataCleaner-monitor-extensions</artifactId>
-		<version>5.0.2.2-SNAPSHOT</version>
+		<version>5.0.2.3</version>
 	</parent>
 	<artifactId>DataCleaner-monitor-sugarcrm-datastore-wizard</artifactId>
 
